Assets/css/style.css
body {
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: 100%;
    box-sizing: border-box;
    margin: 0;
    padding: 0;
} 

.container {
    background-color: #e8e9e6;
    width: 80%;
    max-width: 1000px;
    margin: 0 auto;
    height: 600px;
    padding: 10px;
    margin-top: 50px;
    margin-bottom: auto;
    border: 2px solid darkgray;
}

.container .high-score {
    display: inline;
    float: left;
    width: auto;
    padding: 0 10;
    font-size: 15px;
}

.container .timer {
    display: inline;
    float: right;
    width: 70px;
    text-align: left;
    padding: 0 10px;
    font-size: 15px;
    font-weight: bold;
}

h1 {
    clear: both;
    text-align: center;
    margin-top: 50px;
    font-size: 42px;
}

h3 {
    margin: 0;
}

.viewing {
    clear: both;
    text-align: left;
    padding: 0px 100px;
    margin-top: 50px;
    /* border: 2px solid darkgray; */
}

.viewing div {
    font-size: 25px;
}

p {
    text-align: center;
}

.viewing ul {
    counter-reset: quiz-list;
    list-style: lower-alpha;
    position: relative;
    opacity: 1;
}

.viewing li {
    font-size: 25px;
    width: 250px;
    background-color:#330a76;
    color: white;
    margin-bottom: 20px;
    cursor: pointer;
    border-radius: 0px 10px 10px 0px;
    padding-left: 10px;
    opacity: 1;
}

.viewing li::before {
    counter-increment: quiz-list;
    content: counter(quiz-list)". ";
    position: absolute;
    left: -5px;
    background-color:#330a76;
    border-radius: 10px 0px 0px 10px;
    width: 45px;
    padding-left: 5px;
}

.viewing li:hover::before {
    background-color: #930693;
}

.viewing li:hover {
    background-color: #930693;
}

.viewing .form {
    width: auto;
    font-size: 25px;
    font-weight: bold;
    justify-content: center;
    margin-top: 0px;
    margin-bottom: 20px;
}

.viewing .msg {
    font-size: 30px;
    font-weight: bolder;
    margin-top: 0px;
    margin-bottom: 20px;

}

.veiwing .score {
    font-size: 30px;
    font-weight: bold;
    margin-top: 0px;
    margin-bottom: 20px;
}

.viewing .label{
    font-size: 30px;
    font-weight: bold;
    padding-left: 120px;   
}

.viewing .submitForm {
    position: absolute;
    left: 45%;
    padding: 10px;
    margin-left: auto;
    margin-right: auto;
    font-size: 20px;
    border-radius: 10px;
    background-color: #330a76;
}

.startB {
    position: absolute;
    left: 45%;
    padding: 10px;
    margin-left: auto;
    margin-right: auto;
    font-size: 20px;
    border-radius: 10px;
    background-color: #330a76;
    
    color: white;
}
.startB:hover {
    background-color: #930693;
    cursor: pointer;
}

